tests/fixtures/fail/returned_borrow_local.sc
let bad('a: region)(borrow('a) seed: i32): borrow('a) i32 = {
  let local = seed
  borrow local
}

let main(): i32 = 42
